[package]
name = "scrivenwright"
version = "0.1.0"
authors = ["Jesse Slater <jsssltr@gmail.com>"]
edition = "2021"


[dependencies]
dirs = "5.0.1"
ratatui = { version = "0.25", default-features = false}
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
deunicode = "1.4.1"
textwrap = { git = "https://github.com/JesseCSlater/textwrap/", branch = "wrap_single_line_pub"}
