[package]
name = "terminal_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrivenwright = { path = "../scrivenwright" }
crossterm = "0.27.0"
ratatui = "0.24.0"
dirs = "5.0.1"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
deunicode = "1.4.1"