[package]
name = "scrivenwright-web"
version = "0.1.0"
edition = "2021"

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"

[dependencies]
scrivenwright = { path = "../scrivenwright" }
ratatui = { version = "0.25", default-features = false}
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Screen"] }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
send_wrapper = "0.6.0"
derive_more = "0.99.17"
